Compiled index.html.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -365,417 +365,108 @@ textarea {
   font: inherit;
   /* 2 */ }
 
-html {
-  height: 100%;
-  min-height: 100%; }
-
 body {
-  font-family: "Quicksand";
+  font-family: 'Quicksand';
   font-size: 16px;
   font-weight: 300;
   height: 100%;
   width: 100%;
-  background-color: #111;
-  background-image: url(../img/back.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  overflow-x: hidden; }
-  body:after {
-    content: "l o a d i n g . . .";
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: #191919;
-    color: white;
-    text-align: center;
-    padding-top: calc(50vh - .5rem);
-    animation: pulse 1600ms ease-in-out infinite;
-    -webkit-transition: opacity, 1000ms, ease-in-out;
-    -moz-transition: opacity, 1000ms, ease-in-out;
-    transition: opacity, 1000ms, ease-in-out; }
-  body.loaded:after {
-    opacity: 0; }
-  body.loaded--go:after {
-    display: none; }
-@keyframes pulse {
+  overflow: hidden; }
+  @media (min-width: 800px) {
+    body:after {
+      content: 'GENE';
+      color: rgba(0, 0, 0, 0.2);
+      font-family: 'Futura';
+      font-size: 200px;
+      text-align: center;
+      padding-top: 100px;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-color: #111;
+      background-image: url(../img/back.jpg);
+      background-size: cover;
+      background-repeat: no-repeat;
+      animation: blurry 18000ms infinite;
+      z-index: -1; } }
+
+@keyframes blurry {
   0% {
-    transform: scale(1); }
+    transform: scale(1) rotateZ(0deg); }
+  20% {
+    transform: scale(1) rotateZ(0deg); }
   50% {
-    transform: scale(1.1); }
+    transform: scale(2.1) rotateZ(20deg); }
+  80% {
+    transform: scale(3) rotate(340deg); }
   100% {
-    transform: scale(1); } }
-section {
-  text-align: center;
-  padding: 2rem 1rem; }
-
-h2 {
-  margin: 1rem 0 2rem;
-  color: white;
-  font-family: "Codystar";
-  font-size: 2rem;
-  font-weight: 400;
-  text-transform: uppercase; }
-
-h3 {
-  color: white;
-  font-weight: 300;
-  letter-spacing: 1px;
-  cursor: default; }
+    transform: scale(1) rotateZ(360deg); } }
 
 a {
-  text-decoration: none;
-  color: white;
-  opacity: 0.7;
-  -webkit-transition: all 0.15s ease-out 0s;
-  -moz-transition: all 0.15s ease-out 0s;
-  transition: all 0.15s ease-out 0s; }
-  a:hover {
-    opacity: 1; }
+  text-decoration: none; }
 
-ul {
-  list-style: none;
-  padding: 0; }
-
-@media(max-width: 600px) {
+@media (max-width: 800px) {
   body {
     background-image: url(../img/back_mobile.jpg);
+    background-repeat: no-repeat;
     background-size: cover; } }
-.social-media-box .icon-container {
-  width: 30px;
-  height: 30px;
-  padding: 0.7rem;
-  line-height: 10px;
-  vertical-align: text-top;
-  display: inline-block;
-  text-align: center;
-  border: 2px solid rgba(255, 255, 255, 0);
-  border-radius: 50%;
-  margin: 0 0.2rem;
-  -webkit-transition: all 0.15s ease-out 0s;
-  -moz-transition: all 0.15s ease-out 0s;
-  transition: all 0.15s ease-out 0s; }
-  .social-media-box .icon-container:hover {
-    transform: scale(1.2); }
-    .social-media-box .icon-container:hover .icon {
-      -webkit-filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.3));
-      filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.3));
-      opacity: 1; }
-  .social-media-box .icon-container__fb:hover {
-    background: rgba(199, 151, 195, 0.4);
-    box-shadow: -4px 9px 0px -5px rgba(199, 151, 195, 0.3), 4px -10px 0 -4px rgba(199, 151, 195, 0.3), 20px -38px 0 -14px rgba(199, 151, 195, 0.3), -20px 38px 0 -20px rgba(199, 151, 195, 0.3); }
-    .social-media-box .icon-container__fb:hover .socicon-facebook {
-      color: #3b5998; }
-  .social-media-box .icon-container__insta:hover {
-    background: rgba(97, 176, 183, 0.4);
-    box-shadow: 8px -2px 0px -3px rgba(97, 176, 183, 0.2), -12px 2px 0 -4px rgba(97, 176, 183, 0.2), -46px 6px 0 -22px rgba(97, 176, 183, 0.2), 52px -6px 0 -12px rgba(97, 176, 183, 0.2); }
-    .social-media-box .icon-container__insta:hover .socicon-instagram {
-      color: #fb3958; }
-  .social-media-box .icon-container__tw:hover {
-    background: rgba(47, 199, 111, 0.4);
-    box-shadow: -2px 6px 0px -3px rgba(47, 199, 111, 0.3), 2px -6px 0 -2px rgba(47, 199, 111, 0.2), 12px -36px 0 -20px rgba(47, 199, 111, 0.4), -14px 40px 0 -16px rgba(47, 199, 111, 0.2); }
-    .social-media-box .icon-container__tw:hover .socicon-twitter {
-      color: #00aced; }
-  .social-media-box .icon-container__yt:hover {
-    background: rgba(182, 197, 41, 0.4);
-    box-shadow: 6px 8px 0px -5px rgba(182, 197, 41, 0.2), -4px -6px 0 -2px rgba(182, 197, 41, 0.3), 26px 28px 0 -18px rgba(182, 197, 41, 0.3); }
-    .social-media-box .icon-container__yt:hover .socicon-youtube {
-      color: #bb0000; }
-  .social-media-box .icon-container .icon {
-    color: white;
-    opacity: 0.5;
-    -webkit-transition: all 0.15s ease-out 0s;
-    -moz-transition: all 0.15s ease-out 0s;
-    transition: all 0.15s ease-out 0s; }
-    .social-media-box .icon-container .icon:before {
-      line-height: 50px;
-      vertical-align: middle;
-      text-decoration: none;
-      font-size: 2rem; }
 
-section.header {
-  background: rgba(255, 255, 255, 0.1);
+section.main {
+  z-index: 1;
   height: 100vh;
-  box-sizing: border-box; }
-  section.header h1 {
-    font-family: "Monofett";
-    font-size: 16rem;
-    font-weight: 100;
-    letter-spacing: 2px;
-    line-height: 12rem;
-    margin: 1rem 0 1rem;
-    color: rgba(64, 224, 208, 0.6);
-    opacity: 0.8;
-    cursor: default;
-    -webkit-transition: all 0.15s ease-out 0s;
-    -moz-transition: all 0.15s ease-out 0s;
-    transition: all 0.15s ease-out 0s; }
-  section.header .logo img {
-    width: 80%;
-    max-width: 600px; }
-  section.header .social-media-box .icon {
-    color: rgba(0, 0, 0, 0.5);
-    opacity: 0.8; }
-  section.header .arrow-container {
-    width: 250px;
-    margin: 3.4rem auto 0;
-    padding: 2rem;
-    background: rgba(64, 224, 208, 0.2);
-    border: 1px solid rgba(64, 224, 208, 0.3);
-    border-radius: 0.5rem;
-    opacity: 0;
-    -webkit-transition: opacity, 500ms;
-    -moz-transition: opacity, 500ms;
-    transition: opacity, 500ms; }
-    section.header .arrow-container.loaded {
-      opacity: 1; }
-    section.header .arrow-container:hover {
-      animation: downdrop 400ms ease-in-out infinite; }
-@keyframes downdrop {
-  0% {
-    transform: translateY(0); }
-  50% {
-    transform: translateY(0.5rem); }
-  100% {
-    transform: translateY(0); } }
-    section.header .arrow-container .arrow__text {
-      font-family: "Codystar";
-      font-size: 2.4rem;
-      font-weight: 400;
-      border: 2px dotted #faf;
-      margin: 0 auto 1rem;
-      animation: arrow-text-pulse 3000ms 300ms ease-in-out infinite; }
-    section.header .arrow-container .arrow__body {
-      margin: 0 auto;
-      width: 3rem;
-      height: 2.5rem;
-      background: rgba(0, 0, 0, 0.3);
-      border-bottom: 0px;
-      animation: arrow-pulse 2000ms ease-in-out infinite; }
-    section.header .arrow-container .arrow__tip {
-      margin: 0 auto;
-      width: 0;
-      height: 0;
-      border-left: 5rem solid transparent;
-      border-right: 5rem solid transparent;
-      border-top: 5rem solid rgba(0, 0, 0, 0.3);
-      animation: arrow-tip-pulse 2000ms ease-in-out infinite; }
-@keyframes arrow-text-pulse {
-  0% {
-    color: yellow;
-    border-color: yellow; }
-  25% {
-    color: #88aaff;
-    border-color: #88aaff; }
-  50% {
-    color: #88ffcc;
-    border-color: #88ffcc; }
-  75% {
-    color: magenta;
-    border-color: magenta; }
-  100% {
-    color: yellow;
-    border-color: yellow; } }
-@keyframes arrow-pulse {
-  0% {
-    background: rgba(255, 255, 0, 0.4); }
-  25% {
-    background: rgba(136, 170, 255, 0.6); }
-  50% {
-    background: rgba(136, 255, 204, 0.6); }
-  75% {
-    background: rgba(255, 0, 255, 0.6); }
-  100% {
-    background: rgba(255, 255, 0, 0.4); } }
-@keyframes arrow-tip-pulse {
-  0% {
-    border-top-color: rgba(255, 255, 0, 0.4); }
-  25% {
-    border-top-color: rgba(136, 170, 255, 0.6); }
-  50% {
-    border-top-color: rgba(136, 255, 204, 0.6); }
-  75% {
-    border-top-color: rgba(255, 0, 255, 0.6); }
-  100% {
-    border-top-color: rgba(255, 255, 0, 0.4); } }
-@keyframes arrow-wrap-pulse {
-  0% {
-    border-color: rgba(255, 255, 0, 0.6);
-    background: rgba(255, 255, 0, 0.1); }
-  25% {
-    border-color: rgba(136, 170, 255, 0.6);
-    background: rgba(136, 170, 255, 0.1); }
-  50% {
-    border-color: rgba(136, 255, 204, 0.6);
-    background: rgba(136, 255, 204, 0.1); }
-  75% {
-    border-color: rgba(255, 0, 255, 0.6);
-    background: rgba(255, 0, 255, 0.1); }
-  100% {
-    border-color: rgba(255, 255, 0, 0.6);
-    background: rgba(255, 255, 0, 0.1); } }
-@media(max-width: 660px) {
-  section.header h1 {
-    font-size: 11rem;
-    line-height: 9rem;
-    margin: 0; } }
-@media(max-width: 460px) {
-  section.header .arrow-container {
-    width: 250px !important; }
-  section.header h1 {
-    font-size: 8rem;
-    line-height: 6rem;
-    margin: 0.5rem 0; } }
-@media(max-width: 380px) {
-  section.header .arrow-container {
-    width: 180px !important; }
-  section.header h1 {
-    font-size: 7rem;
-    line-height: 5rem;
-    margin: 0.5rem 0; } }
-@media(max-width: 310px) {
-  section.header h1 {
-    font-size: 6rem;
-    line-height: 3rem;
-    margin: 0.5rem 0; }
-  section.header .social-media-box .icon-container {
-    margin: 1rem 0.3rem; } }
-section.single {
-  background: rgba(255, 255, 255, 0.1); }
-  section.single .video-wrapper {
-    max-width: 800px;
-    margin: 0 auto; }
-    section.single .video-wrapper .video {
-      position: relative;
-      padding-bottom: 56.25%;
-      padding-top: 25px;
-      height: 0; }
-      section.single .video-wrapper .video iframe {
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 100%; }
-@media(max-width: 700px) {
-  section.single .video iframe {
-    width: 100%;
-    height: 100%; }
-  @media(max-width: 390px) {
-    section.single {
-      padding: 2rem 0; } } }
-section.live .live-wrapper .concert-wrapper {
-  margin: 0.5rem auto;
-  border: 4px solid rgba(136, 255, 204, 0.5);
-  max-width: 300px;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  animation: glowing 3000ms ease-in-out infinite; }
-@keyframes glowing {
-  0% {
-    border-color: rgba(255, 255, 0, 0.8); }
-  25% {
-    border-color: #88aaff; }
-  50% {
-    border-color: #88ffcc; }
-  75% {
-    border-color: magenta; }
-  100% {
-    border-color: rgba(255, 255, 0, 0.8); } }
-  section.live .live-wrapper .concert-wrapper .concert-box {
-    flex-grow: 1;
-    font-family: "Quicksand";
-    font-size: 1.3rem;
-    padding: 0.5rem 1rem; }
-    section.live .live-wrapper .concert-wrapper .concert-box.date-box {
-      background: rgba(0, 0, 0, 0.2);
-      color: #eee;
-      text-align: right; }
-    section.live .live-wrapper .concert-wrapper .concert-box.location-box {
-      background: rgba(255, 255, 255, 0.2);
-      color: #111;
-      text-align: left; }
-    section.live .live-wrapper .concert-wrapper .concert-box li {
-      margin: 0.3rem 0; }
-@media(max-width: 310px) {
-  section.live .concert-box {
-    font-size: 1rem !important; } }
-section.newsletter {
-  background: rgba(255, 255, 255, 0.1); }
-  section.newsletter .signup-box {
-    margin: 1rem auto;
-    max-width: 400px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between; }
+  section.main .main-container {
     display: flex;
-    flex-direction: column;
-    font-family: "Quicksand"; }
-    section.newsletter .signup-box .input-box {
-      width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center; }
+    section.main .main-container .link-container {
+      height: 40vh;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between; }
+      section.main .main-container .link-container .link {
+        font-size: 1.2rem;
+        color: #ccc;
+        text-shadow: 0 0 4px rgba(0, 0, 0, 0.7);
+        cursor: pointer;
+        transition: all 100ms ease-in;
+        margin: 0 auto; }
+        section.main .main-container .link-container .link .tooltip {
+          color: #111;
+          text-shadow: none;
+          margin: 0;
+          opacity: 0;
+          transition: all 100ms ease-in; }
+        section.main .main-container .link-container .link:hover {
+          transform: scale(1.05);
+          color: #3EFFDC; }
+          section.main .main-container .link-container .link:hover .tooltip {
+            opacity: 1; }
+    section.main .main-container .logo {
+      width: 300px;
+      height: 300px;
+      background-image: url("/assets/img/linesTransparent.svg");
+      background-repeat: no-repeat; }
+  section.main .footer {
+    color: #222; }
+
+@media (max-width: 800px) {
+  section.main .main-container {
+    display: block; }
+    section.main .main-container .link-container {
       display: flex;
       flex-direction: row;
-      box-sizing: border-box; }
-      section.newsletter .signup-box .input-box input {
-        width: calc(50% - 2px);
-        margin: 4px 0;
-        padding: 0.8rem 0.4rem;
-        border: 2px solid #eee;
-        background: rgba(216, 216, 216, 0.3);
-        color: white;
-        letter-spacing: 1px;
-        box-sizing: border-box; }
-        section.newsletter .signup-box .input-box input.input--name {
-          margin-right: 2px; }
-        section.newsletter .signup-box .input-box input.input--email {
-          margin-left: 2px; }
-    section.newsletter .signup-box .submit {
-      margin: 0 auto;
-      width: 100%;
-      padding: 0.8rem;
-      border: 2px solid #eee;
-      background: rgba(168, 255, 235, 0.5);
-      color: white;
-      letter-spacing: 2px;
-      text-transform: uppercase; }
-@media(max-width: 600px) {
-  section.newsletter .signup-box {
-    width: 90%; }
-    section.newsletter .signup-box .input-box {
-      display: block;
-      width: 100%; }
-      section.newsletter .signup-box .input-box input {
-        width: 100%;
-        margin: 2px 0 !important; }
-    section.newsletter .signup-box .submit {
-      width: 100%;
-      margin: 2px 0; } }
-section.contact {
-  background: rgba(230, 48, 48, 0.2);
-  padding: 1rem 0 0; }
-  section.contact .contact-link {
-    font-family: "Quicksand";
-    font-size: 2.5rem;
-    letter-spacing: 1px;
-    display: block;
-    margin: 1rem 0 2rem; }
-  section.contact p {
-    font-family: "Quicksand";
-    margin: 3rem 0 0;
-    padding: 1rem;
-    color: #888;
-    background: rgba(0, 0, 0, 0.2); }
-@media(max-width: 600px) {
-  section.contact .contact-link {
-    font-size: 1.8rem; }
-  section.contact p {
-    background: rgba(0, 0, 0, 0.4);
-    color: #bbb; } }
-@media(max-width: 400px) {
-  section.contact .contact-link {
-    font-size: 1.4rem;
-    margin: 1rem 0; }
-  section.contact p {
-    margin-top: 1rem; } }
+      height: auto; }
+      section.main .main-container .link-container .link .tooltip {
+        display: none; }
+    section.main .main-container .logo {
+      margin: 1rem auto; }
+  section.main .footer {
+    color: #888; } }
