--- a/assets/css/2-layouts/main.sass
+++ b/assets/css/2-layouts/main.sass
@@ -49,7 +49,7 @@ section.main
       width: 300px
       height: 300px
       background:
-        image: url('/assets/img/linesTransparent.svg')
+        image: url('../img/linesTransparent.svg')
         repeat: no-repeat
 
 
