--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -452,7 +452,7 @@ section.main {
     section.main .main-container .logo {
       width: 300px;
       height: 300px;
-      background-image: url("/assets/img/linesTransparent.svg");
+      background-image: url("../img/linesTransparent.svg");
       background-repeat: no-repeat; }
   section.main .footer {
     color: #222; }
