Added coming soon.

--- a/_includes/main.jade
+++ b/_includes/main.jade
@@ -1,21 +1,26 @@
 section.main
-  //h1 GENE
-  p.header
-  .main-container
-    .link-container
-      a(href='https://facebook.com/visitgene').link FACEBOOK
-        .tooltip facebook.com/visitgene
-
-      a(href='https://instagram.com/visitgene').link INSTAGRAM
-        .tooltip instagram.com/visitgene
-
-    .logo
-    .link-container
-      a.link YOUTUBE
-        .tooltip coming soon
-
-      a(href='https://twitter.com/visitgene').link TWITTER
-        .tooltip twitter.com/visitgene
-
-  .footer
-    p © 2017 by GENE. All rights reserved.
+  h1 coming soon
+  h1 coming soon
+  h1 coming soon
+  h1 coming soon
+  h1 coming soon
+  h1 coming soon
+  //p.header
+  //.main-container
+  //  .link-container
+  //    a(href='https://facebook.com/visitgene').link FACEBOOK
+  //      .tooltip facebook.com/visitgene
+  //
+  //    a(href='https://instagram.com/visitgene').link INSTAGRAM
+  //      .tooltip instagram.com/visitgene
+  //
+  //  .logo
+  //  .link-container
+  //    a.link YOUTUBE
+  //      .tooltip coming soon
+  //
+  //    a(href='https://twitter.com/visitgene').link TWITTER
+  //      .tooltip twitter.com/visitgene
+  //
+  //.footer
+  //  p © 2017 by GENE. All rights reserved.
