--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -3,7 +3,7 @@
 //  min-height: 100%
 body
   font:
-    family: 'Quicksand'
+    family: 'Helvetica Neue'
     size: 16px
     weight: 300
   height: 100%
@@ -47,6 +47,13 @@ body
       transform: scale(3) rotate(340deg)
     100%
       transform: scale(1) rotateZ(360deg)
+
+h1
+  color: rgba(255,255,255,0.3)
+  font-size: 18vw
+  font-weight: 100
+  margin: -1rem
+  line-height: 10vw
 
 a
   text-decoration: none
