--- a/_includes/main.jade
+++ b/_includes/main.jade
@@ -22,5 +22,5 @@ section.main
   //    a(href='https://twitter.com/visitgene').link TWITTER
   //      .tooltip twitter.com/visitgene
   //
-  //.footer
-  //  p © 2017 by GENE. All rights reserved.
+  .footer
+    p © 2017 by GENE. All rights reserved.
