--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -476,4 +476,6 @@ section.main {
     section.main .main-container .logo {
       margin: 1rem auto; }
   section.main .footer {
-    color: #888; } }
+    color: #888;
+    position: absolute;
+    bottom: 0rem; } }
