Added logo to back.

--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -28,7 +28,7 @@ body
 
       background:
         color: #111
-        image: url(../img/back.jpg)
+        image: url(../img/backwithlogo.jpg)
         size: cover
         repeat: no-repeat
 
