--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -386,7 +386,7 @@ body {
       bottom: 0;
       left: 0;
       background-color: #111;
-      background-image: url(../img/back.jpg);
+      background-image: url(../img/backwithlogo.jpg);
       background-size: cover;
       background-repeat: no-repeat;
       animation: blurry 18000ms infinite;
